--- a/ios/DreamEchoApp/Resources/Info.plist
+++ b/ios/DreamEchoApp/Resources/Info.plist
@@ -22,6 +22,8 @@
     <string>https://api.dreamecho.ai</string>
     <key>API_EVENTS_URL</key>
     <string>https://api.dreamecho.ai</string>
+    <key>ENABLE_HAPTICS</key>
+    <string>true</string>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
     <key>UIApplicationSceneManifest</key>
